--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-{% load staticfiles %} <!-- New Line -->
+{% load staticfiles %}
 
 <html>
     <head>
@@ -11,18 +11,14 @@
         <h1>Rango says...</h1>
 
         <div>
-            here is the about page. <br />
-            <strong>This tutorial has been put together by Carl.</strong><br />
+            here is the about page.<br />
+            <strong>This tutorial has been put together by Carl</strong><br />
         </div>
 
         <div>
-            <a href="/rango/index/">About</a><br />
-            <img src="{% static 'images/rango.jpg' %}"
-                alt="Picture of Rango" /> <!-- New Line -->
-            <img src="{% static 'images/cat.jpg' %}"
-                alt="Picture of a Cat" /> <!-- New Line -->
+            <a href="/rango/">Index</a>
+            <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
+            <img src="{{MEDIA_URL }}cat.jpg" alt="Picture of a Cat" />
         </div>
-            
     </body>
-
 </html>
