--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-
+{% extends 'rango/base.html' %}
 {% load staticfiles %} <!-- New Line -->
 
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
+{% block title_block %}
+    Homepage
+{% endblock title_block %}
 
-    <body>
-        <h1>Rango says...</h1>
+{% block body_block %}
+<h1>Rango says...</h1>
 
         <div>
             hey there partner! <br />
@@ -49,10 +48,7 @@
         </div>
 
         <div>
-            <a href="/rango/about/">About</a><br />
             <img src="{% static 'images/rango.jpg' %}"
-                alt="Picture of Rango" /> <!-- new Line -->
+                alt="Picture of Rango" />
         </div>
-    </body>
-
-</html>
+{% endblock body_block %}
