--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -8,10 +8,11 @@
 
 {% block body_block %}
 <h1>Rango says...</h1>
-        
+<div>    
     here is the about page.<br />
     <strong>This tutorial has been put together by Carl</strong><br />
-        
+    <p>Visits: {{ visits }}</p>
+</div>
     <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
     <img src="{{MEDIA_URL }}cat.jpg" alt="Picture of a Cat" />
         
