--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html>
 {% extends 'rango/base.html' %}
-{% load staticfiles %} <!-- New Line -->
+{% load staticfiles %}
 
 {% block title_block %}
     Homepage
